# fastAPI-project-base

./: .gitignore  pyproject.toml
bazinga/: __init__.py  routes.py
bazinga/database/: connection.py
bazinga/handlers/: hello_world.py
bazinga/infra/: __init__.py  app.py  databases.py  exceptions.py  handler.py  route.py
tests/: test_bazinga.py
